Fix Port Problem

--- a/coraza.conf
+++ b/coraza.conf
@@ -1,15 +1,10 @@
 # -- Rule engine initialization ----------------------------------------------
 
-
-SecRule REMOTE_ADDR "@ipMatch 127.0.0.1" "id:1,phase:1,deny,status:403"
-
 # Enable Coraza, attaching it to every transaction. Use detection
 # only to start with, because that minimises the chances of post-installation
 # disruption.
 #
-
-# Conflict With This Rule
-#SecRuleEngine DetectionOnly
+SecRuleEngine DetectionOnly
 
 
 # -- Request body handling ---------------------------------------------------
@@ -224,11 +219,12 @@ SecDataDir /tmp/
 # trigger a server error (determined by a 5xx or 4xx, excluding 404,  
 # level response status codes).
 #
-SecAuditEngine RelevantOnly
+SecAuditLog logs/audit/audit.log
+SecAuditEngine On
 SecAuditLogRelevantStatus "^(?:(5|4)(0|1)[0-9])$"
 
 # Log everything we know about a transaction.
-SecAuditLogParts ABIJDEFHZ
+SecAuditLogParts ABCDEFGHIJKZ
 
 # Use a single file for logging. This is much easier to look at, but
 # assumes that you will use the audit log only occasionally.
