update Coraza module & configurations

--- a/coraza.conf
+++ b/coraza.conf
@@ -1,11 +1,44 @@
 # -- Rule engine initialization ----------------------------------------------
 
+#SecRule REMOTE_ADDR "@ipMatch 172.29.112.1" "id:1,phase:1,deny,status:403"
+
 # Enable Coraza, attaching it to every transaction. Use detection
 # only to start with, because that minimises the chances of post-installation
 # disruption.
-#
-SecRuleEngine DetectionOnly
 
+SecRuleEngine On
+
+SecRule ARGS|ARGS_NAMES|REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_BODY|REQUEST_HEADERS|XML:/* "(?i)(<script[^>]*>[\s\S]*?<\/script[^>]*>|<script[^>]*>[\s\S]*?<\/script[[\s\S]]*[\s\S]|<script[^>]*>[\s\S]*?<\/script[\s]*[\s]|<script[^>]*>[\s\S]*?<\/script|<script[^>]*>[\s\S]*?|<\/script[^>]*>)" \
+    "id:1222000,\
+    phase:1,\
+    block,\
+    msg:'Possible XSS Attack',\
+    logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}',\
+    severity:'2'"
+
+SecRule ARGS|ARGS_NAMES|REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_BODY|REQUEST_HEADERS|XML:/* "(?i)alert\(|confirm\(|prompt\(|<img.*?src=|<iframe.*?src=|<frame.*?src=|<video.*?src=|<audio.*?src=|<object.*?data=|<embed.*?src=|<svg.*?src=|<applet.*?code=|<meta.*?content=|<link.*?href=|<base.*?href=|<script.*?src=|<form.*?action=|<input.*?value=|<textarea.*?>" \
+    "id:104401,\
+    phase:1,\
+    block,\
+    msg:'Possible XSS Attack',\
+    logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}',\
+    severity:'2'"
+
+SecRule ARGS|ARGS_NAMES|REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_BODY|REQUEST_HEADERS|XML:/* "(?i)javascript\s*:|<\w*\s+.*?(onabort|onblur|onchange|onclick|ondblclick|onerror|onfocus|onkeydown|onkeypress|onkeyup|onload|onmousedown|onmousemove|onmouseout|onmouseover|onmouseup|onreset|onresize|onselect|onsubmit|onunload)=|eval\(|\.\.\/|file://" \
+    "id:121002,\
+    phase:1,\
+    block,\
+    msg:'Possible XSS Attack',\
+    logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}',\
+    severity:'2'"
+
+SecRule REQUEST_FILENAME "\.(asp|aspx|thtml|shtml|jsp)$" \
+    "id:1000623,\
+    phase:1,\
+    block,\
+    msg:'XSS Attack in File Extension',\
+    logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}',\
+    severity:'2'"
 
 # -- Request body handling ---------------------------------------------------
 
@@ -196,7 +229,6 @@ SecDataDir /tmp/
 #
 #SecUploadFileMode 0600
 
-
 # -- Debug log configuration -------------------------------------------------
 
 # Default debug log path
@@ -212,23 +244,22 @@ SecDataDir /tmp/
 #SecDebugLog /opt/coraza/var/log/debug.log
 #SecDebugLogLevel 3
 
-
 # -- Audit log configuration -------------------------------------------------
 
 # Log the transactions that are marked by a rule, as well as those that
 # trigger a server error (determined by a 5xx or 4xx, excluding 404,  
 # level response status codes).
-#
-SecAuditLog logs/audit/audit.log
+
+SecAuditLog logs/audit/audit2.log
 SecAuditEngine On
-SecAuditLogRelevantStatus "^(?:(5|4)(0|1)[0-9])$"
+SecAuditLogRelevantStatus "^(?:5|40[1235])"
+SecAuditLogParts ABCDEFGHIJKZ
 
 # Log everything we know about a transaction.
-SecAuditLogParts ABCDEFGHIJKZ
 
 # Use a single file for logging. This is much easier to look at, but
 # assumes that you will use the audit log only occasionally.
-#
+
 SecAuditLogType Serial
 
 
@@ -245,3 +276,6 @@ SecArgumentSeparator &
 # evasion attacks (against the rules that examine named cookies).
 #
 SecCookieFormat 0
+
+
+
